tests/compile_fail/general_struct_err.rs
use encase::ShaderType;

fn main() {}

#[derive(ShaderType)]
struct Test;
