tests/compile_fail/general_struct_err.stderr
error: Only non empty structs with named fields are supported!
 --> tests/compile_fail/general_struct_err.rs:5:10
  |
5 | #[derive(ShaderType)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `ShaderType` (in Nightly builds, run with -Z macro-backtrace for more info)
